# OSM-ShipRouting

./: .gitignore  CMakeLists.txt  README.md  readme.txt  readmee.txt
UI/: index.html  main.js  nodes.json  nodes_ant.json  style.css
eval/: cell1-29.json  cell10-16.json  cell16-6.json  cell19-6.json  cell21-6.json  cell22-5.json  cell63-9.json  graph-at16-6.json  graph-at22-5.json  speed_benchmark.txt  speed_benchmark64.txt  speed_benchmark664g.txt  speed_benchmark96.txt  speed_benchmark96_2.txt  speed_benchmark_per.txt  speed_benchmark_per64.txt  speed_benchmark_per96.txt  tn_stats.txt  tn_stats64.txt
shared_files/: graph_small_test.fmi  tnr_graph.json  transit_nodes.tnr
src/: GeoWriter.cpp  GeoWriter.h  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  GraphUtils.cpp  GraphUtils.h  InPolyTest.cpp  InPolyTest.h  PBFProcessing.cpp  PBFProcessing.h  PBFReader.cpp  PBFReader.h  TransitNodesRouting.cpp  TransitNodesRouting.h  Utils.cpp  Utils.h  VectorMath.cpp  VectorMath.h  main.cpp
src/graph/: Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  InPolyTest.h
src/io/: GeoWriter.cpp  GeoWriter.h  PBFProcessing.h
src/transit_nodes/: SingleTnPass.cpp  SingleTnPass.h  TransitNodesDef.h  TransitNodesEvaluation.cpp  TransitNodesEvaluation.h  TransitNodesQuery.cpp  TransitNodesQuery.h  TransitNodesRouting.cpp  TransitNodesRouting.h
src/utils/: GraphUtils.cpp  GraphUtils.h  Utils.cpp  Utils.h
